man: remove the section suffix from page names in listDir()

After recent major changes to man's listDir() (starting at
223de3ec8cde479fbe7f102c76b756cacbedbda5 and ending with
1d752c0497868fb07abd574f260f85c1ce62dfc9) man page names acquired
section suffixes in parentheses. For example, "aio.h" became
"aio.h (0p)". This page name format change broke URLs formed by joining
a section URL and a page name, e.g. "man:/(7)" + '/' + "bootup (7)".
The `xdg-open "man:/(7)/bootup (7)"` command opens this broken link in
KHelpCenter, which displays the "Manual Page Viewer Error" page.
The added section suffixes also break displaying man pages in KDevelop's
Man Pages documentation plugin.

Revert this breaking change by removing the section suffix rather than
reformatting it into parentheses.

BUG: 452920
FIXED-IN: 22.04.02